# bingo

./: Cargo.toml  LICENSE  README.md
generator/: Cargo.toml
generator/src/: lib.rs  main.rs
simulator/: Cargo.toml
simulator/src/: lib.rs  main.rs
src/: lib.rs  main.rs
ticket/: Cargo.toml
ticket/src/: lib.rs
