#  Copyright 2025 Pablo E. Pilotti 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at

#      http://www.apache.org/licenses/LICENSE-2.0

#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "bingo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Pablo E. Pilotti"]
description = "A bingo ticket generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
stack-vec = "*"
thousands = "*"
rand = "*"
rand_chacha = "*"
argparse = "*"
ticket = { path = "../ticket/" }

[lib]
name = "generator"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/main.rs"
