[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "*"
rand = "*"
rand_chacha = "*"
ticket = { path = "../ticket/" }

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/main.rs"